@@ -42,6 +42,7 @@ test-suite libtorrent :
 	[ run test_file_storage.cpp ]
 	[ run test_peer_priority.cpp ]
 	[ run test_file.cpp ]
+	[ run test_privacy.cpp ]
 	[ run test_threads.cpp ]
 	[ run test_rss.cpp ]
 	[ run test_bandwidth_limiter.cpp ]
